# kootshi-axum

./: .gitignore  Cargo.toml  docker-compose.yaml  example.env  openapi.yaml
.cargo/: config.toml
Notes/: Models-2.md  Models-3.md  Models.md  Use-Cases.md
Notes/frontend/: 1.md  2.md
examples/: generate_secrets.rs
migrations/: 20251116152249_init.down.sql  20251116152249_init.up.sql  20251128140800_add_role_to_user_table.down.sql  20251128140800_add_role_to_user_table.up.sql
sql/: 00-create-tables.sql  00-drop-tables.sql  02-seed-tables.sql  seed-fake-data.sql  unseed-fake-data.sql
src/: configs.rs  logging.rs  main.rs  middlewares.rs  secrets.rs
src/controllers/: company.rs  errors.rs  mod.rs  user.rs
src/dtos/: mod.rs
src/errors/: client_error.rs  mod.rs  server_error.rs
src/extractors/: auth_token.rs  jwt_token.rs  mod.rs
src/models/: api_schemas.rs  company.rs  extractors.rs  logging.rs  mod.rs  request_log_info.rs  request_payloads.rs  tables.rs  user.rs
src/routers/: auth.rs  basic.rs  companies.rs  mod.rs  pitches.rs  users.rs
src/secrets/: mod.rs  secret_manager.rs
src/temp-models/: request_payloads-temp.rs  tables.rs  user_dto.rs
temp-src/: configs.rs  main.rs  middlewares.rs  secrets.rs
temp-src/controllers/: mod.rs
temp-src/errors/: client_error.rs  mod.rs  server_error.rs
temp-src/extractors/: auth_token.rs  mod.rs
temp-src/models/: mod.rs
temp-tests/: basic.rs  companies.rs  login.rs  signup.rs  users.rs
tests/: api.rs  auth.rs  basic.rs  companies.rs  login.rs  pitches.rs  signup.rs  users.rs
tests/auth/: login.rs
(+38 files in other folders)
