[package]
name = "kootshi-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
base64-url = "3.0.2"
hmac = "0.12.1"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.1"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.100"
httpc-test = "0.1.10"
serial_test = "3.2.0"
